fixed overlapping title to allow logout button to work, detected on mobile production

--- a/src/style/dashboard/cards/cards.scss
+++ b/src/style/dashboard/cards/cards.scss
@@ -1,5 +1,9 @@
 .card-hidden{
     transform: translateX(1500px);
+
+    @media screen and (max-width: 700px) {
+        transform: translateX(700px);
+    }
 }
 
 .card-journey{
@@ -82,7 +86,6 @@
     padding-top: 80px;
     padding-bottom: 100px;
     position: fixed;
-    // box-shadow: 0px 3px 21px -2px rgba(255,255,255,0.8);
     box-shadow: 0px 3px 21px -2px rgba(141, 108, 108, 0.2);
     background-color: rgba(255,252,242,.8);
     border-radius: 15px;
