--- a/src/style/dashboard/dashboard.scss
+++ b/src/style/dashboard/dashboard.scss
@@ -3,7 +3,8 @@
     grid-template-columns: 1fr 3fr;
 
     @media screen and (max-width: 700px) {
-        display: flow-root;  
+        display: flow-root;
+        width: 100vw;  
     }
 
     &__right {
@@ -20,7 +21,7 @@
 }
 
 .dashboard-navbar {
-    width: 100vw;
+    width: 100%;
     display: grid;
     justify-content: right;
     position: fixed;
