--- a/src/style/dashboard/userDetail.scss
+++ b/src/style/dashboard/userDetail.scss
@@ -16,7 +16,8 @@
         @media screen and (max-width: 700px) {
             left: 0px;
             font-size: 40px;
-            height: 40px;  
+            height: 40px;
+            width: 60px;  
         }
         
     }
